--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
 	</head>
 
 	<body>
-		<div id="top">
+
+		<div id="all">
 			<header id="site-header">
-				<h1 id="title">Hello. Welcome to:</h1>
+				<h2 id="title">Hello. Welcome to:<br><span></span></h2>
 			</header>
-    </div>
+
       <main>
-        <h2 id="weather">The Weather Today is:</h2>
+        <h2 id="weather">The Weather Today is:<br><span></span></h2>
       </main>
 
       <footer id="bottom">
         <h2 id="bye">Have a great day!</h2>
       </footer>
-
+  </div>
 
 <script type="text/javascript" src="main.js"></script>
 	</body>
